--- a/css/style.css
+++ b/css/style.css
@@ -516,11 +516,11 @@ header {
 }
 
 .modal-close {
-    background: none;
+    background-color: #e74c3c;
+    color: white;
     border: none;
-    font-size: 1.5em;
+    font-size: 0.9em;
     cursor: pointer;
-    color: var(--text-light);
 }
 
 .modal-body {
